refactor: improved texture and image caching, revised use of transform2d

--- a/oops2d.csproj
+++ b/oops2d.csproj
@@ -32,8 +32,12 @@
     <Compile Include="Core\*.cs" />
     <Compile Include="Core\Internal\*.cs" />
     <Compile Include="Rendering\*.cs" />
-    <Compile Include="Core\Utils\*.cs" />
     <Compile Include="*.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="Input\Input.cs" />
+    <Compile Include="Math\Utils.cs" />
   </ItemGroup>
 
 </Project>
