--- a/oops2d.csproj
+++ b/oops2d.csproj
@@ -41,6 +41,7 @@
     <Compile Include="Physics\Collider2D.cs" />
     <Compile Include="Rendering\Internal\Renderer2D.cs" />
     <Compile Include="Rendering\Text\Text2D.cs" />
+    <Compile Include="Rendering\Text\TextAlignment.cs" />
     <Compile Include="Rendering\Text\TextFormat.cs" />
   </ItemGroup>
 
