--- a/oops2d.csproj
+++ b/oops2d.csproj
@@ -40,6 +40,7 @@
     <Compile Include="Math\Utils.cs" />
     <Compile Include="Physics\Hitbox.cs" />
     <Compile Include="Physics\Collider2D.cs" />
+    <Compile Include="Physics\Rigidbody2D.cs" />
     <Compile Include="Rendering\Internal\Renderer2D.cs" />
     <Compile Include="Rendering\Text\Text2D.cs" />
     <Compile Include="Rendering\Text\TextAlignment.cs" />
